--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "express": "3.1.0",
     "jade": "*",
-    "pg": "0.12.3",
-    "orm": "2.0.1"
+    "mongoose": "3.5.7"
   }
 }
