--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.1.0",
     "jade": "*",
-    "mongoose": "3.5.7"
+    "mongoose": "3.5.7",
+    "socket.io": "0.9.13"
   }
 }
