--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "jade": "*",
     "mongoose": "3.5.7",
     "socket.io": "0.9.13"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.2.x"
   }
 }
